[FIX] about before after font size on mobile 18px

--- a/css/about.css
+++ b/css/about.css
@@ -1287,6 +1287,13 @@
 
 
 
+    .container_all_references::before, .container_all_references::after {
+        font-size: 18px;
+
+    }
+
+
+
 
 
 
