--- a/css/projects.css
+++ b/css/projects.css
@@ -124,17 +124,6 @@
     display: flex;
 }
 
-.container_first_project {
-    /* background-color: orange; */
-}
-
-.container_second_project {
-    /* background-color: palegreen; */
-}
-
-.container_third_project {
-    /* background-color: peru ; */
-}
 
                 /* ------------------------------- CONTAINER ONE PROJECTS TOP ------------------------------- */
 
